[package]
name = "drive_async_iterator_impl"
version = "0.0.0"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "internal proc macro crate for `drive_async_iterator`"
license = "Apache-2.0 OR MIT"
readme = "README.md"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full"] }
